Feature: Enable shared data view - both Person A and B can see combined entries

--- a/dashboard.html
+++ b/dashboard.html
@@ -47,6 +47,7 @@
       <table class="expense-table" id="personATable">
         <thead>
           <tr>
+            <th>Person</th>
             <th>Date</th>
             <th>Added (₹)</th>
             <th>Used (₹)</th>
@@ -60,7 +61,7 @@
         </tbody>
         <tfoot>
           <tr class="totals-row">
-            <td><strong>TOTALS</strong></td>
+            <td colspan="2"><strong>TOTALS</strong></td>
             <td id="personA_totalAdded">0</td>
             <td id="personA_totalUsed">0</td>
             <td id="personA_totalSavings">0</td>
@@ -68,7 +69,7 @@
             <td></td>
           </tr>
           <tr class="action-row">
-            <td colspan="6">
+            <td colspan="7">
               <button onclick="addPersonAEntry()" class="add-btn">➕ Add Daily Entry</button>
             </td>
           </tr>
@@ -105,6 +106,7 @@
       <table class="expense-table" id="personBTable">
         <thead>
           <tr>
+            <th>Person</th>
             <th>Date</th>
             <th>Added (₹)</th>
             <th>Used (₹)</th>
@@ -118,7 +120,7 @@
         </tbody>
         <tfoot>
           <tr class="totals-row">
-            <td><strong>TOTALS</strong></td>
+            <td colspan="2"><strong>TOTALS</strong></td>
             <td id="personB_totalAdded">0</td>
             <td id="personB_totalUsed">0</td>
             <td id="personB_totalSavings">0</td>
@@ -126,7 +128,7 @@
             <td></td>
           </tr>
           <tr class="action-row">
-            <td colspan="6">
+            <td colspan="7">
               <button onclick="addPersonBEntry()" class="add-btn">➕ Add Daily Entry</button>
             </td>
           </tr>
