--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       />
 
       <button onclick="login()" class="login-button">Login</button>
-      <p class="hint">Default: 1234</p>
+      <p class="hint">Default:XXXX</p>
     </div>
   </div>
 
