--- a/dashboard.html
+++ b/dashboard.html
@@ -250,7 +250,14 @@
 
   </div>
 
-  <!-- Scripts -->
+  <!-- Firebase SDK (Real-time database) -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
+  
+  <!-- Your Firebase Configuration -->
+  <script src="js/firebaseConfig.js"></script>
+  
+  <!-- Your Application Scripts -->
   <script src="js/storage.js"></script>
   <script src="js/personA.js"></script>
   <script src="js/personB.js"></script>
