--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
     </div>
   </div>
 
+  <!-- Firebase SDK (Real-time database) -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
+  
+  <!-- Your Firebase Configuration -->
+  <script src="js/firebaseConfig.js"></script>
+  
+  <!-- Your Application Scripts -->
   <script src="js/storage.js"></script>
   <script src="js/auth.js"></script>
 </body>
