Fix Firebase SDK - use COMPAT version for compatibility with standard HTML scripts

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </div>
   </div>
 
-  <!-- Firebase SDK (Real-time database) -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
+  <!-- Firebase SDK (COMPAT VERSION - Works with regular scripts) -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
   
   <!-- Your Firebase Configuration -->
   <script src="js/firebaseConfig.js"></script>
