--- a/dashboard.html
+++ b/dashboard.html
@@ -250,14 +250,15 @@
 
   </div>
 
-  <!-- Firebase SDK (COMPAT VERSION - Works with regular scripts) -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+  <!-- Firebase SDK: v10 (Firestore + Auth) -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   
   <!-- Your Firebase Configuration -->
   <script src="js/firebaseConfig.js"></script>
   
-  <!-- Your Application Scripts -->
+  <!-- Your Application Scripts (storage.js MUST load first) -->
   <script src="js/storage.js"></script>
   <script src="js/personA.js"></script>
   <script src="js/personB.js"></script>
