--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     </div>
   </div>
 
-  <!-- Firebase SDK (COMPAT VERSION - Works with regular scripts) -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+  <!-- Firebase SDK: v10 (Firestore + Auth) -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
   
   <!-- Your Firebase Configuration -->
   <script src="js/firebaseConfig.js"></script>
